package com.gustavofirmino.aluguelcarros.domain.model;

/**
 * Tipo do agente conforme especificação do sistema:
 * agentes podem ser empresas ou bancos.
 * Bancos podem conceder contratos de crédito associados ao aluguel.
 */
public enum TipoAgente {
    EMPRESA,
    BANCO
}
