package com.gustavofirmino.aluguelcarros.infrastructure.persistence.entity;

import com.gustavofirmino.aluguelcarros.domain.model.StatusPedido;
import io.micronaut.serde.annotation.Serdeable;
import jakarta.persistence.*;

import java.time.LocalDate;
import java.time.LocalDateTime;

/**
 * Entidade JPA que representa um pedido de aluguel na base de dados.
 * Relaciona um cliente a um automóvel com período e status.
 */
@Serdeable
@Entity
@Table(name = "pedidos")
public class PedidoEntity {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.EAGER, optional = false)
    @JoinColumn(name = "cliente_id", nullable = false)
    private ClienteEntity cliente;

    @ManyToOne(fetch = FetchType.EAGER, optional = false)
    @JoinColumn(name = "automovel_id", nullable = false)
    private AutomovelEntity automovel;

    @Column(nullable = false)
    private LocalDate dataInicio;

    @Column(nullable = false)
    private LocalDate dataFim;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private StatusPedido status;

    @Column(nullable = false, updatable = false)
    private LocalDateTime dataCriacao;

    @Column
    private LocalDateTime dataAtualizacao;

    @Column(length = 500)
    private String observacao;

    /** Banco que analisa o pedido — copiado de cliente.bancoAgente na criação. */
    @ManyToOne(fetch = FetchType.EAGER)
    @JoinColumn(name = "banco_agente_id")
    private AgenteEntity bancoAgente;

    /** Empresa que fecha o contrato — definida ao gerar o contrato. */
    @ManyToOne(fetch = FetchType.EAGER)
    @JoinColumn(name = "empresa_agente_id")
    private AgenteEntity empresa;

    public PedidoEntity() {
    }

    @PrePersist
    public void prePersist() {
        this.dataCriacao = LocalDateTime.now();
        this.dataAtualizacao = LocalDateTime.now();
        if (this.status == null) {
            this.status = StatusPedido.PENDENTE;
        }
    }

    @PreUpdate
    public void preUpdate() {
        this.dataAtualizacao = LocalDateTime.now();
    }

    public Long getId() { return id; }
    public void setId(Long id) { this.id = id; }

    public ClienteEntity getCliente() { return cliente; }
    public void setCliente(ClienteEntity cliente) { this.cliente = cliente; }

    public AutomovelEntity getAutomovel() { return automovel; }
    public void setAutomovel(AutomovelEntity automovel) { this.automovel = automovel; }

    public LocalDate getDataInicio() { return dataInicio; }
    public void setDataInicio(LocalDate dataInicio) { this.dataInicio = dataInicio; }

    public LocalDate getDataFim() { return dataFim; }
    public void setDataFim(LocalDate dataFim) { this.dataFim = dataFim; }

    public StatusPedido getStatus() { return status; }
    public void setStatus(StatusPedido status) { this.status = status; }

    public LocalDateTime getDataCriacao() { return dataCriacao; }
    public void setDataCriacao(LocalDateTime dataCriacao) { this.dataCriacao = dataCriacao; }

    public LocalDateTime getDataAtualizacao() { return dataAtualizacao; }
    public void setDataAtualizacao(LocalDateTime dataAtualizacao) { this.dataAtualizacao = dataAtualizacao; }

    public String getObservacao() { return observacao; }
    public void setObservacao(String observacao) { this.observacao = observacao; }

    public AgenteEntity getBancoAgente() { return bancoAgente; }
    public void setBancoAgente(AgenteEntity bancoAgente) { this.bancoAgente = bancoAgente; }

    public AgenteEntity getEmpresa() { return empresa; }
    public void setEmpresa(AgenteEntity empresa) { this.empresa = empresa; }
}
